syntax = "proto3";

package auth;

service Auth {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Registration (RegistrationRequest) returns (RegistrationResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegistrationRequest {
    string username = 1;
    string password = 2;
}

message RegistrationResponse {
    string token = 1;
}